CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PKG_LIST dali-core
             dali-adaptor
             dali-toolkit)
INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(REQUIRED_PKGS REQUIRED ${PKG_LIST})

FOREACH(flag ${REQUIRED_PKGS_CFLAGS})
        SET(REQUIRED_CFLAGS "${REQUIRED_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${REQUIRED_CFLAGS} -Werror -Wall")
SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS}")

FILE(GLOB SRCS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")

FOREACH(EXAMPLE ${SRCS})
  STRING(REGEX REPLACE ".cpp" "" EXECUTABLE "${EXAMPLE}")
  ADD_EXECUTABLE (${EXECUTABLE}.example ${EXAMPLE})
  TARGET_LINK_LIBRARIES(${EXECUTABLE}.example ${REQUIRED_PKGS_LDFLAGS})
ENDFOREACH(EXAMPLE)
